chore: bump swingbridge version 1.2.0